Closed Bug 1703927 Opened 5 years ago Closed 5 years ago

Non-native context menu sometimes appears in addition to native context menu, after toggling widget.macos.native-context-menus pref

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

Details

(Whiteboard: [proton-context-menus][mac:mr1])

Attachments

(1 file)

Steps to reproduce:

  1. Use a Firefox build that has browser.proton.enabled set to true.
  2. Open two tabs, about:config and https://www.mozilla.org/en-US/ .
  3. On about:config, set widget.macos.native-context-menus to false.
  4. Right-click on about:config.
  5. Dismiss the non-native menu and flip widget.macos.native-context-menus to true.
  6. Switch to the mozilla.org tab.
  7. Right click on the "Get It Now" link.
  8. Right click elsewhere on the page.
  9. Wait for a second.

Expected results:
Only a native menu should be open.

Actual results:
A non-native menu opens behind the native menu.

Now that nsMenuPopupFrame considers itself open while the native menu is shown,
it may try to open its non-native widget if layout happens to run while the
native menu is shown.
This check prevents that.

Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/2a02a8b02c1f Never update nsView visibility for menupopups that are shown as non-native menus. r=tnikkel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: