Bug 1703927 - Never update nsView visibility for menupopups that are shown as non-native menus. r=tnikkel

Now that nsMenuPopupFrame considers itself open while the native menu is shown,
it may try to open its non-native widget if layout happens to run while the
native menu is shown.
This check prevents that.

Differential Revision: https://phabricator.services.mozilla.com/D111326